tests/baselines/reference/errorSupression1.errors.txt
errorSupression1.ts(3,15): error TS2339: Property 'b' does not exist on type 'typeof Foo'.


==== errorSupression1.ts (1 errors) ====
    class Foo { static bar() { return "x"; } }
    
    var baz = Foo.b;
                  ~
!!! error TS2339: Property 'b' does not exist on type 'typeof Foo'.
      // Foo.b won't bind. 
    baz.concat("y");
    
      // So we don't want an error on 'concat'.